fix: version specific issues